Z-index fixes for footer

--- a/static/assets/scss/_fix.scss
+++ b/static/assets/scss/_fix.scss
@@ -449,3 +449,13 @@ nav {
         text-decoration: underline;
     }
 }
+
+
+.companies .config-left {
+    z-index: 100;
+}
+
+.config-inner {
+    position: relative;
+    z-index: 1000;
+}
